--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <script src="main.js"></script>
+</head>
+<body>
+    
+<header>
 
+<div id="hamburger">
+    <input type="checkbox" id="hamburger-checkbox">
+    <label for="hamburger-checkbox">
+        <div id="menu">
+        <span id="line1"></span>
+        <span id="line2"></span>
+        <span id="line3"></span>
+        </div>
+    </label>
+
+    <div id="menu-list">
+        <ul>
+            <li> <a href=""> Om mig </a></li>
+            <li> <a href=""> Utbildning </a></li>
+            <li><a href=""> Portfolio </a></li>
+            <li><a href=""> Erfarenhet </a></li>
+            <li><a href=""> Kontakta mig </a></li>
+        </ul>
+    </div>
+
+</div>
+
+</header>
+
+<main></main>
+
+
+</body>
+</html>
