Fixat med hamburger menyn och lagt in lite design

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
     <div id="menu-list">
         <ul>
-            <li> <a href=""> Om mig </a></li>
-            <li> <a href=""> Utbildning </a></li>
-            <li><a href=""> Portfolio </a></li>
-            <li><a href=""> Erfarenhet </a></li>
-            <li><a href=""> Kontakta mig </a></li>
+            <li> <a id="list-text" href="#"> Om mig </a></li>
+            <li> <a id="list-text" href="#"> Utbildning </a></li>
+            <li><a id="list-text" href="#"> Portfolio </a></li>
+            <li><a id="list-text" href="#"> Erfarenhet </a></li>
+            <li><a id="list-text" href="#"> Kontakta mig </a></li>
         </ul>
     </div>
 
@@ -38,7 +38,22 @@
 
 </header>
 
-<main></main>
+<main>
+
+    <div id="decoration-circle"></div>
+    <div id="decoration-square"></div>
+    <div id="decoration-triangle"></div>
+
+    <div id="menu-opacity"></div>
+
+    <div id="intro-text">
+    <h1>
+        Hej! <br> 
+        Jag heter Edwin och studerar till front end developer på medieinstitutet i Göteborg. <br>
+        Här får du lite information om mig.
+    </h1>
+    </div>
+</main>
 
 
 </body>
