--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
     <div id="menu-list">
         <ul>
-            <li> <a id="list-text" href="#"> Om mig </a></li>
-            <li> <a id="list-text" href="#"> Utbildning </a></li>
-            <li><a id="list-text" href="#"> Portfolio </a></li>
-            <li><a id="list-text" href="#"> Erfarenhet </a></li>
-            <li><a id="list-text" href="#"> Kontakta mig </a></li>
+            <li><a id="list-text" href="#"><div id="border-bottom">  Om mig </div></a></li>
+            <li><a id="list-text" href="#"><div id="border-bottom">  Utbildning </div></a></li>
+            <li><a id="list-text" href="#"><div id="border-bottom">  Portfolio </div></a></li>
+            <li><a id="list-text" href="#"><div id="border-bottom">  Erfarenhet </div></a></li>
+            <li><a id="list-text" href="#"><div id="border-bottom">  Kontakta mig </div></a></li>
         </ul>
     </div>
 
@@ -41,8 +41,9 @@
 <main>
 
     <div id="decoration-circle"></div>
+    <div id="decoration-circle2"></div>
     <div id="decoration-square"></div>
-    <div id="decoration-triangle"></div>
+    <div id="decoration-square2"></div>
 
     <div id="menu-opacity"></div>
 
