--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
     
 <header>
 
-<!-- <div id="hamburger">
+<div id="hamburger">
     <input type="checkbox" id="hamburger-checkbox">
-    <label for="hamburger-checkbox"> -->
-        <div class="menu-btn">
-            <div class="menu-btn__burger"></div>
-          </div>
-    <!-- </label> -->
+    <label for="hamburger-checkbox">
+        <div id="menu">
+        <span id="line1"></span>
+        <span id="line2"></span>
+        <span id="line3"></span>
+        </div>
+    </label>
 
     <div id="menu-list">
         <ul>
