Lagt till två delar och ändrat lite färger

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         <ul>
             <li><a id="list-text" href="#om-mig"><div id="border-bottom">  Om mig </div></a></li>
             <li><a id="list-text" href="#utbildning"><div id="border-bottom">  Utbildning </div></a></li>
-            <li><a id="list-text" href="#"><div id="border-bottom">  Portfolio </div></a></li>
-            <li><a id="list-text" href="#"><div id="border-bottom">  Erfarenhet </div></a></li>
-            <li><a id="list-text" href="#"><div id="border-bottom">  Kontakta mig </div></a></li>
+            <li><a id="list-text" href="#portfolio"><div id="border-bottom">  Portfolio </div></a></li>
+            <li><a id="list-text" href="#erfarenhet"><div id="border-bottom">  Erfarenhet </div></a></li>
+            <li><a id="list-text" href="#kontakta-mig"><div id="border-bottom">  Kontakta mig </div></a></li>
         </ul>
     </div>
 
@@ -60,23 +60,53 @@
 </div>
 
     <div id="om-mig">
-        <h1 id="code-font"> &lt;Om mig&gt;</h1>
+        <h1 id="code-font" style="color: #FA2FBD"> &lt;Om mig&gt;</h1>
         <p style="font-size: larger;">Lorem, ipsum dolor sit amet consectetur <br>
              adipisicing elit. Quae facilis provident blanditiis iste aperiam <br>
               officia iure fugiat ex, accusantium exercitationem <br> 
               magni sint, quis laboriosam dolor voluptatem? <br>
                Mollitia reprehenderit esse iusto?</p>
-        <p id="code-font"> &lt;/Om mig&gt;</p>
+        <p id="code-font" style="color: #FA2FBD;"> &lt;/Om mig&gt;</p>
     </div>
 
     <div id="utbildning">
-        <h1 id="code-font"> &lt;Utbildning&gt;</h1>
+        <h1 id="code-font" style="color: #ED0800"> &lt;Utbildning&gt;</h1>
         <p style="font-size: larger;">Lorem, ipsum dolor sit amet consectetur <br>
              adipisicing elit. Quae facilis provident blanditiis iste aperiam <br>
               officia iure fugiat ex, accusantium exercitationem <br> 
               magni sint, quis laboriosam dolor voluptatem? <br>
                Mollitia reprehenderit esse iusto?</p>
-        <p id="code-font"> &lt;/Utbildning&gt;</p>
+        <p id="code-font" style="color: #ED0800"> &lt;/Utbildning&gt;</p>
+    </div>
+
+    <div id="portfolio">
+        <h1 id="code-font" style="color: #FFF67D"> &lt;Portfolio&gt;</h1>
+        <p style="font-size: larger;">Lorem, ipsum dolor sit amet consectetur <br>
+             adipisicing elit. Quae facilis provident blanditiis iste aperiam <br>
+              officia iure fugiat ex, accusantium exercitationem <br> 
+              magni sint, quis laboriosam dolor voluptatem? <br>
+               Mollitia reprehenderit esse iusto?</p>
+        <p id="code-font" style="color: #FFF67D"> &lt;/Portfolio&gt;</p>
+    </div>
+
+    <div id="erfarenhet">
+        <h1 id="code-font" style="color: #00C8F0"> &lt;Erfarenhet&gt;</h1>
+        <p style="font-size: larger;">Lorem, ipsum dolor sit amet consectetur <br>
+             adipisicing elit. Quae facilis provident blanditiis iste aperiam <br>
+              officia iure fugiat ex, accusantium exercitationem <br> 
+              magni sint, quis laboriosam dolor voluptatem? <br>
+               Mollitia reprehenderit esse iusto?</p>
+        <p id="code-font" style="color: #00C8F0"> &lt;/Erfarenhet&gt;</p>
+    </div>
+
+    <div id="kontakta-mig">
+        <h1 id="code-font" style="color: #005f0d"> &lt;Kontakta mig&gt;</h1>
+        <p style="font-size: larger;">Lorem, ipsum dolor sit amet consectetur <br>
+             adipisicing elit. Quae facilis provident blanditiis iste aperiam <br>
+              officia iure fugiat ex, accusantium exercitationem <br> 
+              magni sint, quis laboriosam dolor voluptatem? <br>
+               Mollitia reprehenderit esse iusto?</p>
+        <p id="code-font" style="color: #005f0d"> &lt;/Kontakta mig&gt;</p>
     </div>
 
 </main>
