--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <main>
     <div id="startsida">
     <div id="intro-text">
-    <h1>
+    <h1 id="startsida-h1">
         Hej! <br> 
         Jag heter Edwin och studerar till front end developer på medieinstitutet i Göteborg. <br>
         Här får du lite information om mig.
@@ -74,7 +74,7 @@
         + Webbserverprogramering (html, css, js och php)</p>
         <br>
         <br>
-        <img src="/Images/MI-logo.png" alt="" class="slide-in from-left">
+        <img src="/Images/MI-logo.png" id="MIlogo" alt="" class="slide-in from-left">
         <p style="font-size: larger;" class="slide-in from-left">
         Jag utbildar mig just nu till frontenddeveloper och går första året på medieinstitutet i Göteborg. <br>
         Jag är färdigutbildad junior frontenddeveloper år 2023.</p>
@@ -91,11 +91,9 @@
     <div id="erfarenhet" class="slide-in fade-in">
         <div id="decoration-square2" class="slide-in from-right"></div>
         <h1 id="code-font" style="color: #00C8F0" class="slide-in from-left"> &lt;Erfarenhet&gt;</h1>
-        <p style="font-size: larger;" class="slide-in from-left">Lorem, ipsum dolor sit amet consectetur <br>
-             adipisicing elit. Quae facilis provident blanditiis iste aperiam <br>
-              officia iure fugiat ex, accusantium exercitationem <br> 
-              magni sint, quis laboriosam dolor voluptatem? <br>
-               Mollitia reprehenderit esse iusto?</p>
+        <p style="font-size: larger;" class="slide-in from-left">Jag har jobbat mycket i html och css och kan grunderna men har fortfarande mycket att lära mig. <br>
+        Jag har börjat att lära mig javascript och kan lösa simpla problem utan att ta hjälp av internet eller andra källor. <br>
+        Jag har haft en kurs med php och kan göra simpla databaser.</p>
         <p id="code-font" style="color: #00C8F0" class="slide-in from-left"> &lt;/Erfarenhet&gt;</p>
     </div>
 
@@ -105,20 +103,20 @@
         <form id="kontakta-mig-form">
             <div id="form">
             <div id="för-efternamn-email">
-                <label for="förnamn">Förnamn:
-                <input type="text" placeholder="skriv ditt förnamn här..." id="förnamn">
+                <label for="förnamn" id="förnamn">Förnamn:
+                <input type="text" placeholder="skriv ditt förnamn här..." >
             </label>
                 
-                <label for="efternamn">Efternamn:
+                <label for="efternamn" id="efternamn">Efternamn:
                 <input type="text" placeholder="skriv ditt efternamn här...">
                 </label>
                 
-                <label for="email">Email:
-                <input type="text" placeholder="skriv din mailadress här...">
-                </label>
+                <label for="email" id="email">Email:
+                    <input type="text" placeholder="skriv din mailadress här...">
+                    </label>
                 </div>
                 <div id="meddelande">
-                <label for="meddelande">Meddelande:
+                <label for="meddelande" >Meddelande:
                 <textarea placeholder="skriv ditt meddelande här..." id="meddelande-input" cols="50" rows="5"></textarea>
                 </label>
                 </div>
@@ -138,6 +136,7 @@
 
 </main>
 
+<footer><img src="/Images/MI-logo.png" alt=""></footer>
 
 </body>
 </html>
