--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <h1 id="code-font" style="color: #00C8F0" class="slide-in from-left"> &lt;Erfarenhet&gt;</h1>
         <p style="font-size: larger;" class="slide-in from-left">Jag har jobbat mycket i html och css och kan grunderna men har fortfarande mycket att lära mig. <br>
         Jag har börjat att lära mig javascript och kan lösa simpla problem utan att ta hjälp av internet eller andra källor. <br>
-        Jag har haft en kurs med php och kan göra simpla databaser.</p>
+        Jag har haft en kurs med php och kan hantera simpla databaser.</p>
         <p id="code-font" style="color: #00C8F0" class="slide-in from-left"> &lt;/Erfarenhet&gt;</p>
     </div>
 
@@ -134,7 +134,7 @@
     
 </main>
 
-<footer><img src="/Images/MI-logo.png" alt=""></footer>
+<footer><img src="Images\MI-logo.png" alt=""></footer>
 
 </body>
 </html>
