--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div id="utbildning">
         <div id="decoration-circle2" class="slide-in from-right"></div>
         <h1 id="code-font" style="color: #ED0800"> &lt;Utbildning&gt;</h1>
-        <img src="/Images/Östrabo-logga.png" alt="" class="slide-in from-left">
+        <img src="Images\Östrabo-logga.png" alt="" class="slide-in from-left">
         <p style="font-size: larger;" class="slide-in from-left">
         Jag gick teknik på Östrabo i Uddevalla med inriktningen informations- och medieteknik. <br>
         Meriterande ämnen: <br>
@@ -71,7 +71,7 @@
         + Webbserverprogramering (html, css, js och php)</p>
         <br>
         <br>
-        <img src="/Images/MI-logo.png" id="MIlogo" alt="" class="slide-in from-left">
+        <img src="Images\MI-logo.png" id="MIlogo" alt="" class="slide-in from-left">
         <p style="font-size: larger;" class="slide-in from-left">
         Jag utbildar mig just nu till frontenddeveloper och går första året på medieinstitutet i Göteborg. <br>
         Jag är färdigutbildad junior frontenddeveloper år 2023.</p>
